--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,25 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>Mudando a cor</title>
+		<title>Olha o prazo...</title>
 		<link rel="stylesheet" type="text/css" href="css/teste.css" media="screen">
 	</head>
 	<body>
-		<label>Mudando a cor de acordo com a data</label>
-		<div class="teste" id="oi"></div>
+		<form id="formulario">
+			<div class="corpo">
+				<div  class="titulo">Verificando o prazo:</div>
+				<div class="campos">
+					<label type="text" class="labelTitulo">Digite seu item: <input class="campoEntrada" placeholder="Nome do produto"/></label>
+				</div>
+				<div class="campos">
+					<label type="text" class="labelTitulo">Digite a data: <input class="campoEntrada" placeholder="Data de vencimento"/></label>
+				</div>
+				<div class="campos">
+					<label type="text" class="labelTitulo">Digite o prazo: <input class="campoEntrada" placeholder="Quantidade de dias"/></label>
+				</div>
+				<div class="teste" id="oi">HELLO</div>
+			</div>
+		</form>
 	</body>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
 	<script src="js/index.js"></script>
